// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CityPicker/> should render CityPicker 1`] = `
<div
  class="cuke-city-picker"
>
  <div
    class="cuke-city-picker-inner"
  >
    <div
      class="cuke-input-wrapper cuke-input-has-suffix"
    >
      <input
        class="cuke-input cuke-city-picker-input"
        placeholder="请选择"
        readonly=""
        type="text"
        value=""
      />
      <span
        class="cuke-input-suffix"
      >
        <svg
          class="cuke-city-picker-arrow"
          fill="none"
          height="1em"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="1em"
        >
          <polyline
            points="6 9 12 15 18 9"
          />
        </svg>
      </span>
    </div>
  </div>
  <div
    class="cuke-city-picker-content cuke-city-picker-close cuke-ui-no-animate"
  >
    <div
      class="cuke-city-picker-core"
    >
      <div
        class="cuke-city-picker-core-panel"
      >
        <div
          class="cuke-city-picker-core-panel-header"
        >
          <ul
            class="cuke-city-picker-core-panel-header-wrap"
          >
            <li
              class="cuke-city-picker-core-item cuke-city-picker-core-active"
            >
              <span>
                热门
              </span>
            </li>
            <li
              class="cuke-city-picker-core-item"
            >
              <span>
                ABCDE
              </span>
            </li>
            <li
              class="cuke-city-picker-core-item"
            >
              <span>
                FGHIJ
              </span>
            </li>
            <li
              class="cuke-city-picker-core-item"
            >
              <span>
                KLMNO
              </span>
            </li>
            <li
              class="cuke-city-picker-core-item"
            >
              <span>
                PQRST
              </span>
            </li>
            <li
              class="cuke-city-picker-core-item"
            >
              <span>
                UVWXYZ
              </span>
            </li>
          </ul>
        </div>
        <div
          class="cuke-city-picker-core-panel-content"
        >
          <ul
            class="cuke-city-picker-core-panel-content-wrap"
          >
            <li
              class="cuke-city-picker-core-city"
            >
              成都
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<CityPicker/> should render custom size 1`] = `
<div>
  <div
    class="cuke-city-picker"
  >
    <div
      class="cuke-city-picker-inner"
    >
      <div
        class="cuke-input-wrapper cuke-input-has-suffix"
      >
        <input
          class="cuke-input cuke-city-picker-input cuke-input-small"
          placeholder="small"
          readonly=""
          type="text"
          value=""
        />
        <span
          class="cuke-input-suffix"
        >
          <svg
            class="cuke-city-picker-arrow"
            fill="none"
            height="1em"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="1em"
          >
            <polyline
              points="6 9 12 15 18 9"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="cuke-city-picker-content cuke-city-picker-close cuke-ui-no-animate"
    >
      <div
        class="cuke-city-picker-core"
      >
        <div
          class="cuke-city-picker-core-panel"
        >
          <div
            class="cuke-city-picker-core-panel-header"
          >
            <ul
              class="cuke-city-picker-core-panel-header-wrap"
            >
              <li
                class="cuke-city-picker-core-item cuke-city-picker-core-active"
              >
                <span>
                  热门
                </span>
              </li>
              <li
                class="cuke-city-picker-core-item"
              >
                <span>
                  ABCDE
                </span>
              </li>
              <li
                class="cuke-city-picker-core-item"
              >
                <span>
                  FGHIJ
                </span>
              </li>
              <li
                class="cuke-city-picker-core-item"
              >
                <span>
                  KLMNO
                </span>
              </li>
              <li
                class="cuke-city-picker-core-item"
              >
                <span>
                  PQRST
                </span>
              </li>
              <li
                class="cuke-city-picker-core-item"
              >
                <span>
                  UVWXYZ
                </span>
              </li>
            </ul>
          </div>
          <div
            class="cuke-city-picker-core-panel-content"
          >
            <ul
              class="cuke-city-picker-core-panel-content-wrap"
            >
              <li
                class="cuke-city-picker-core-city"
              >
                成都
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="cuke-city-picker"
  >
    <div
      class="cuke-city-picker-inner"
    >
      <div
        class="cuke-input-wrapper cuke-input-has-suffix"
      >
        <input
          class="cuke-input cuke-city-picker-input"
          placeholder="default"
          readonly=""
          type="text"
          value=""
        />
        <span
          class="cuke-input-suffix"
        >
          <svg
            class="cuke-city-picker-arrow"
            fill="none"
            height="1em"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="1em"
          >
            <polyline
              points="6 9 12 15 18 9"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="cuke-city-picker-content cuke-city-picker-close cuke-ui-no-animate"
    >
      <div
        class="cuke-city-picker-core"
      >
        <div
          class="cuke-city-picker-core-panel"
        >
          <div
            class="cuke-city-picker-core-panel-header"
          >
            <ul
              class="cuke-city-picker-core-panel-header-wrap"
            >
              <li
                class="cuke-city-picker-core-item cuke-city-picker-core-active"
              >
                <span>
                  热门
                </span>
              </li>
              <li
                class="cuke-city-picker-core-item"
              >
                <span>
                  ABCDE
                </span>
              </li>
              <li
                class="cuke-city-picker-core-item"
              >
                <span>
                  FGHIJ
                </span>
              </li>
              <li
                class="cuke-city-picker-core-item"
              >
                <span>
                  KLMNO
                </span>
              </li>
              <li
                class="cuke-city-picker-core-item"
              >
                <span>
                  PQRST
                </span>
              </li>
              <li
                class="cuke-city-picker-core-item"
              >
                <span>
                  UVWXYZ
                </span>
              </li>
            </ul>
          </div>
          <div
            class="cuke-city-picker-core-panel-content"
          >
            <ul
              class="cuke-city-picker-core-panel-content-wrap"
            >
              <li
                class="cuke-city-picker-core-city"
              >
                成都
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="cuke-city-picker"
  >
    <div
      class="cuke-city-picker-inner"
    >
      <div
        class="cuke-input-wrapper cuke-input-has-suffix"
      >
        <input
          class="cuke-input cuke-city-picker-input cuke-input-large"
          placeholder="large"
          readonly=""
          type="text"
          value=""
        />
        <span
          class="cuke-input-suffix"
        >
          <svg
            class="cuke-city-picker-arrow"
            fill="none"
            height="1em"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="1em"
          >
            <polyline
              points="6 9 12 15 18 9"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="cuke-city-picker-content cuke-city-picker-close cuke-ui-no-animate"
    >
      <div
        class="cuke-city-picker-core"
      >
        <div
          class="cuke-city-picker-core-panel"
        >
          <div
            class="cuke-city-picker-core-panel-header"
          >
            <ul
              class="cuke-city-picker-core-panel-header-wrap"
            >
              <li
                class="cuke-city-picker-core-item cuke-city-picker-core-active"
              >
                <span>
                  热门
                </span>
              </li>
              <li
                class="cuke-city-picker-core-item"
              >
                <span>
                  ABCDE
                </span>
              </li>
              <li
                class="cuke-city-picker-core-item"
              >
                <span>
                  FGHIJ
                </span>
              </li>
              <li
                class="cuke-city-picker-core-item"
              >
                <span>
                  KLMNO
                </span>
              </li>
              <li
                class="cuke-city-picker-core-item"
              >
                <span>
                  PQRST
                </span>
              </li>
              <li
                class="cuke-city-picker-core-item"
              >
                <span>
                  UVWXYZ
                </span>
              </li>
            </ul>
          </div>
          <div
            class="cuke-city-picker-core-panel-content"
          >
            <ul
              class="cuke-city-picker-core-panel-content-wrap"
            >
              <li
                class="cuke-city-picker-core-city"
              >
                成都
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
